--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
-  "name": "Locked In Extension",
+  "name": "Lock In - Awaken your flow state",
   "description": "Chrome extension that let's you lock in so that you can unlock your full potential.",
   "version": "1.0",
   "manifest_version": 3,
+  "permissions": ["alarms", "notifications", "webNavigation", "storage"],
   "background": {
     "service_worker": "dist/background.js"
   },
   "action": {
-    "default_popup": "src/popup/popup.html",
+    "default_popup": "views/popup.html",
     "default_icon": "images/icon.png"
   }
 }
