--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,17 @@
   "description": "Chrome extension that let's you lock in so that you can unlock your full potential.",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": ["alarms", "notifications", "webNavigation", "storage"],
+  "permissions": ["alarms", "notifications", "webNavigation", "storage", "tabs"],
   "background": {
     "service_worker": "dist/background.js"
   },
   "action": {
-    "default_popup": "views/popup.html",
-    "default_icon": "images/icon.png"
+    "default_popup": "views/popup.html"
+  },
+  "icons": {
+    "16": "images/icon16.png",
+    "32": "images/icon32.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   }
 }
